trying to fix color contrast cta button

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -92,7 +92,7 @@ header {
 .cta-button:hover,
 .cta-button:focus {
     background-color: #D6D6D6;
-    color: #fff;
+    color: #ffff;
 }
 
 .cards-container {
